# the-winning-formula

./: .gitignore  _quarto.yml  data_science_workflow.md  main.py  pyproject.toml  soccer_pass_simulation.py  styles.css  talk.qmd
_output/: data_science_workflow.html  talk.html
docs/: fonts.css  search.json  styles.css
src/: convert-talk.py
