[project]
name = "data-science-for-security-engineers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pdf2image>=1.17.0",
    "plotnine>=0.15.0",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]
